# colony

./: Cargo.toml  Makefile  README.md  mkdocs.yml  test_build.sh  test_ui.md  test_ui.sh
.github/workflows/: docs.yml  verify.yml
crates/colony-content/: Cargo.toml  pipelines.toml  scenarios.toml
crates/colony-content/src/: lib.rs  vanilla.rs
crates/colony-core/: Cargo.toml
crates/colony-core/benches/: colony_benchmarks.rs
crates/colony-core/src/: black_swan.rs  components.rs  config.rs  corruption.rs  debts.rs  events.rs  faults.rs  game_config.rs  gpu.rs  gpu_dispatch.rs  hotreload.rs  io_bridge.rs  lib.rs  maintenance.rs  mod_loader.rs  mutation.rs  pipelines.rs  queue.rs  research.rs  resources.rs  save.rs  scheduler.rs  session.rs  systems.rs  tests.rs  time.rs  victory.rs
crates/colony-core/src/hotreload/: manager.rs  mod.rs  watcher.rs
crates/colony-core/src/mod_loader/: discovery.rs  mod.rs  registry.rs  validation.rs
crates/colony-core/src/script/: lua_host.rs  mod.rs  wasm_host.rs
crates/colony-core/src/tests/: determinism_tests.rs  m7_unit_tests.rs  parity_tests.rs  persistence_tests.rs  property_tests.rs  security_tests.rs  unit_tests.rs
crates/colony-desktop/: Cargo.toml
crates/colony-desktop/src/: main.rs  ui.rs  ui_app.rs  ui_basic.rs  ui_bevy_native.rs  ui_bevy_text.rs  ui_dashboard.rs  ui_interactive.rs  ui_minimal.rs  ui_minimal_working.rs  ui_mod_console.rs  ui_no_egui.rs  ui_setup.rs  ui_simple.rs  ui_simple_egui.rs  ui_simple_text.rs
crates/colony-headless/: Cargo.toml
crates/colony-headless/src/: main.rs
crates/colony-headless/tests/: e2e_integration.rs
crates/colony-io/: Cargo.toml
crates/colony-io/src/: can_mod.rs  http_parse.rs  http_sim.rs  lib.rs  packets.rs  parsers.rs  simulators.rs  tests.rs  udp_sim.rs
crates/colony-mod/: Cargo.toml
crates/colony-mod-cli/: Cargo.toml
crates/colony-mod-cli/src/: main.rs
crates/colony-mod/src/: lib.rs  schemas.rs
crates/colony-modsdk/: Cargo.toml
crates/colony-modsdk/src/: abi.rs  lib.rs
crates/colony-sim/: Cargo.toml
crates/colony-sim/src/: black_swan.rs  corruption.rs  lib.rs  thermal.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: changelog.md  code-of-conduct.md  contributing.md  getting-started.md  index.md  license.md
docs/developer-docs/: architecture.md  corruption-faults.md  gpu-yard.md  ops-and-pipelines.md  research-rituals.md  sessions-replay.md  verification-m8.md  victory-loss.md
docs/guides/: add-op.md  build-mod.md  first-black-swan.md  test-mod.md
docs/kb/: ci-rc-pipeline.md  debugging.md  deterministic-replay.md  perf-tuning.md
docs/modding/: capabilities.md  cli.md  hot-reload.md  intro.md  lua-events.md  wasm-ops.md
docs/player-manual/: basics.md  desktop.md  survival.md  victory-loss.md
docs/reference/: configs.md  lua-api.md  rust-crates.md  wasm-abi.md
mods/vanilla/: events.toml  pipelines.toml  tech.toml
scripts/: build-rc.sh  generate-signoff.sh
