[package]
name = "colony-headless"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "colony-headless"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
colony-core = { path = "../colony-core" }
colony-io = { path = "../colony-io" }
