[package]
name = "colony-io"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
colony-core = { path = "../colony-core" }
