[package]
name = "colony-io"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_pcg = "0.3"
chrono = { workspace = true }
async-trait = "0.1"
# colony-core dependency removed - not actually used
