[package]
name = "colony-mod-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "colony-mod"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colony-modsdk = { path = "../colony-modsdk" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.3"
